[package]
name = "websocket"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "websocketserver"
path = "src/websocket.rs"

[[bin]]
name = "client"
path = "src/main.rs"


[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
uuid = "1.16.0"
ulid = "1.2.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
rand = "0.9.0"
base64 = "0.22.1"
sha1 = "0.10.6"